<resources>
    <string name="app_name">Github App</string>
    <string name="icon_github">Icon Github</string>
    <string name="github_app">Github App</string>
    <string name="name_dummy" translatable="false">Moh Yusril Ihza Maulana</string>
    <string name="dummy_username">Username</string>
    <string name="image_backgound_detail">Image Backgound Detail</string>
    <string name="location">Location :</string>
    <string name="dummy_location" translatable="false">Pasuruan</string>
    <string name="repostory">Repostory</string>
    <string name="dummy_repostory" translatable="false">80</string>
    <string name="follower">Followers</string>
    <string name="dummy_follower" translatable="false">0</string>
    <string name="following">Following</string>
    <string name="dummy_following" translatable="false">300</string>
    <string name="dummy_company">Company</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Input username</string>
    <string name="ic_location">ic location</string>
    <string name="ic_company">ic company</string>
    <string name="change_language">Change Language</string>

    <string-array name="data_settings">
        <item>@string/change_language</item>
    </string-array>
    <string-array name="data_ic_settings">
        <item>@drawable/ic_change</item>
    </string-array>
    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ic_setting" translatable="false">ic setting</string>
    <string name="favorites">Favorites</string>
    <string name="fav_added">Favorite Added</string>
    <string name="fav_deleted">Favorite Deleted</string>
    <string name="fav_none">No Data</string>
</resources>