<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".activity.detail.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:SpinKit_Color="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_bgDetail"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/image_backgound_detail"
            android:scaleType="fitXY"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo_"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.019"
            tools:src="@tools:sample/avatars" />

        <com.like.LikeButton
            android:id="@+id/btn_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon_size="10dp"
            app:icon_type="heart"
            app:circle_start_color="@color/white"
            android:layout_margin="@dimen/size_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="@dimen/size_16"
            android:text="@string/name_dummy"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_repostory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/repostory"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo_"
            app:layout_constraintEnd_toStartOf="@+id/title_follower"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_photo_"
            app:layout_constraintTop_toTopOf="@+id/img_photo_" />

        <TextView
            android:id="@+id/title_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/follower"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo_"
            app:layout_constraintEnd_toStartOf="@+id/title_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title_repostory"
            app:layout_constraintTop_toTopOf="@+id/img_photo_" />

        <TextView
            android:id="@+id/title_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/following"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/title_follower"
            app:layout_constraintTop_toTopOf="@+id/img_photo_" />

        <TextView
            android:id="@+id/tv_repostory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_4"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/dummy_repostory"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/title_repostory"
            app:layout_constraintEnd_toEndOf="@+id/title_repostory"
            app:layout_constraintStart_toStartOf="@+id/title_repostory" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_4"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/dummy_follower"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/title_follower"
            app:layout_constraintEnd_toEndOf="@+id/title_follower"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="@+id/title_follower" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_4"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/dummy_following"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/title_following"
            app:layout_constraintEnd_toEndOf="@+id/title_following"
            app:layout_constraintStart_toStartOf="@+id/title_following" />

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ic_location"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_company" />

        <ImageView
            android:id="@+id/ic_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginTop="@dimen/size_8"
            android:contentDescription="@string/ic_company"
            android:src="@drawable/ic_baseline_location_city_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/dummy_company"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/size_8"
            app:layout_constraintBottom_toBottomOf="@+id/ic_company"
            app:layout_constraintStart_toEndOf="@+id/ic_company"
            app:layout_constraintTop_toBottomOf="@+id/btn_love" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/dummy_location"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_location"
            app:layout_constraintStart_toEndOf="@+id/ic_location"
            app:layout_constraintTop_toTopOf="@+id/ic_location" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintTop_toBottomOf="@+id/img_bgDetail"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>